# Game

./: BackGround.cpp  BackGround.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.h  Fonts.h  Okno.cpp  Okno.h  README.md  main.cpp
resources/: BackGround.h  Character.h  Enemy.cpp  Enemy.h  Fonts.cpp  Fonts.h  Okno.h
